[tool.poetry]
name = "nats-python-example"
version = "1.0.0"
description = ""
authors = ["Inveracity <cbaklid@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nats-py = "*"
rethinkdb = "2.4.9"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
rethinkdb_mock = "*"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
