[project]
name = "nats-python-example"
version = "1.0.0"
description = ""
authors = [{ name = "Inveracity", email = "cbaklid@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "nats-py",
    "rethinkdb==2.4.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "rethinkdb_mock",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
